@@ -380,11 +380,11 @@ static unsigned int
 scm_ihashx (SCM obj,unsigned int n,struct scm_ihashx_closure * closure)
 {
   SCM answer;
-  SCM_ALLOW_INTS;
+  SCM_DEFER_INTS;
   answer = scm_apply (closure->hash,
 		      scm_listify (obj, scm_ulong2num ((unsigned long)n), SCM_UNDEFINED),
 		      SCM_EOL);
-  SCM_DEFER_INTS;
+  SCM_ALLOW_INTS;
   return SCM_INUM (answer);
 }
 
@@ -394,11 +394,11 @@ static SCM
 scm_sloppy_assx (SCM obj,SCM alist,struct scm_ihashx_closure * closure)
 {
   SCM answer;
-  SCM_ALLOW_INTS;
+  SCM_DEFER_INTS;
   answer = scm_apply (closure->assoc,
 		      scm_listify (obj, alist, SCM_UNDEFINED),
 		      SCM_EOL);
-  SCM_DEFER_INTS;
+  SCM_ALLOW_INTS;
   return answer;
 }
 
@@ -409,11 +409,11 @@ static SCM
 scm_delx_x (SCM obj,SCM alist,struct scm_ihashx_closure * closure)
 {
   SCM answer;
-  SCM_ALLOW_INTS;
+  SCM_DEFER_INTS;
   answer = scm_apply (closure->delete,
 		      scm_listify (obj, alist, SCM_UNDEFINED),
 		      SCM_EOL);
-  SCM_DEFER_INTS;
+  SCM_ALLOW_INTS;
   return answer;
 }
 
